GT-642 fix of build warning